# epson-watchdog

./: .gitignore  Cargo.toml  README.md
launchd/: com.epson.l3150.watchdog.plist.template
src/: config.rs  cups.rs  discovery.rs  installer.rs  main.rs  watchdog.rs
