[package]
name = "epson-watchdog"
version = "0.1.0"
edition = "2021"
description = "macOS launchd agent that monitors Epson L3150 via mDNS and auto-enables the CUPS queue"

[[bin]]
name = "epson-watchdog"
path = "src/main.rs"

[dependencies]
clap       = { version = "4.5", features = ["derive"] }
mdns-sd    = "0.18"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1.0", features = ["derive"] }
toml       = "0.8"
anyhow     = "1.0"
log        = "0.4"
env_logger = "0.11"
